--- a/Source/CRMLite.UI/Areas/CRM/Views/Lead/Details.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Lead/Details.cshtml
@@ -77,7 +77,7 @@
             <div class="clearfix">
                 <div class="col-lg-6">
                     <div class="row">
-                        <label class="lblwidth"><b>Description </b></label><span data-bind="text:Comments"></span>
+                        <label class="lblwidth"><b>Description </b></label><span data-bind="text:Comment"></span>
                     </div>
                 </div>
             </div>
